fix: 🐛 .group-search overflowed

--- a/skinStyles/extensions/WikiEditor/ext.wikiEditor.less
+++ b/skinStyles/extensions/WikiEditor/ext.wikiEditor.less
@@ -160,6 +160,7 @@
 
 	.group-search {
 		border-left-color: var( --border-color-base );
+		margin: -1px;
 	}
 
 	/* Booklet */
